--- a/Set6.ipynb
+++ b/Set6.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -18,9 +18,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\acer\\anaconda3\\lib\\site-packages (1.3.4)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from pandas) (1.20.3)\n",
       "Requirement already satisfied: pytz>=2017.3 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from pandas) (2023.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from pandas) (1.20.3)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
      ]
     }
@@ -41,10 +41,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Define a function to clean the data in a TREC input file\n",
     "def clean_trec_input_file(filename):\n",
@@ -69,10 +68,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Define a function to concatenate the cleaned data from multiple TREC input files\n",
     "def concat_clean_trec_input_files(filenames):\n",
@@ -98,18 +96,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['input\\\\input.acsys8aln2.csv', 'input\\\\input.apl8c621.csv', 'input\\\\input.att99ate.csv', 'input\\\\input.disco1.csv', 'input\\\\input.Flab8atd2..csv', 'input\\\\input.GE8ATD3..csv', 'input\\\\input.ibms99a.csv', 'input\\\\input.INQ601.csv', 'input\\\\input.isa50t.csv', 'input\\\\input.mds08a3.csv', 'input\\\\input.MITSLStd.csv', 'input\\\\input.ok8alx.csv', 'input\\\\input.pir9Atd0.csv', 'input\\\\input.READWARE.csv', 'input\\\\input.Sab8A1.csv']\n"
-     ]
-    }
-   ],
    "source": [
     "# Get a list of all CSV files in the input directory\n",
     "input_files = glob.glob('input/*.csv')\n",
@@ -118,18 +107,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(689266, 4)\n"
-     ]
-    }
-   ],
    "source": [
     "# Concatenate and clean the data in the input files\n",
     "cleaned_data = concat_clean_trec_input_files(input_files)\n",
@@ -139,18 +119,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['query_id', 'ignore', 'doc_id', 'relevance'], dtype='object')\n"
-     ]
-    }
-   ],
    "source": [
     "# Load the qrels file\n",
     "qrels_file_path = 'qrels.trec8.adhoc.csv'\n",
@@ -171,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -249,11 +220,11 @@
     "    cleaned_df = cleaned_df.drop_duplicates(subset=[4])\n",
     "    cleaned_dfs.append(cleaned_df)\n",
     "\n",
-    "# Concatenate all cleaned dataframes into a single dataframe\n",
+    "# Concatenate all cleaned dataframes into a single dataframe (remove)\n",
     "cleaned_data = pd.concat(cleaned_dfs, ignore_index=True)\n",
     "\n",
     "# add column names to the cleaned dataframe\n",
-    "cleaned_data.columns = ['query_id', 'ignore', 'doc_id', 'rank', 'score', 'ignore2']\n",
+    "cleaned_data.columns = ['query_id', 'ignore', 'doc_id', 'rank', 'score', 'ignore2'] #label all the tables \n",
     "\n",
     "# Print the shape of the cleaned data\n",
     "print('Shape of cleaned_data:', cleaned_data.shape)"
@@ -261,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,10 +285,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>query_id</th>\n",
+       "      <th>ignore_x</th>\n",
        "      <th>doc_id</th>\n",
        "      <th>rank</th>\n",
        "      <th>score</th>\n",
-       "      <th>ignore</th>\n",
+       "      <th>ignore2</th>\n",
+       "      <th>ignore_y</th>\n",
        "      <th>relevance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -325,45 +298,55 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>401</td>\n",
+       "      <td>Q0</td>\n",
        "      <td>FT924-5091</td>\n",
        "      <td>0</td>\n",
        "      <td>10015.175781</td>\n",
+       "      <td>acsys8aln2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>401</td>\n",
+       "      <td>Q0</td>\n",
        "      <td>FBIS3-39240</td>\n",
        "      <td>1</td>\n",
        "      <td>10014.111328</td>\n",
+       "      <td>acsys8aln2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>401</td>\n",
+       "      <td>Q0</td>\n",
        "      <td>FT924-4470</td>\n",
        "      <td>2</td>\n",
        "      <td>10013.638672</td>\n",
+       "      <td>acsys8aln2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>401</td>\n",
+       "      <td>Q0</td>\n",
        "      <td>FBIS4-18182</td>\n",
        "      <td>3</td>\n",
        "      <td>10013.591797</td>\n",
+       "      <td>acsys8aln2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>401</td>\n",
+       "      <td>Q0</td>\n",
        "      <td>FBIS3-59055</td>\n",
        "      <td>4</td>\n",
        "      <td>10013.441406</td>\n",
+       "      <td>acsys8aln2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -372,15 +355,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   query_id       doc_id  rank         score  ignore  relevance\n",
-       "0       401   FT924-5091     0  10015.175781     0.0        1.0\n",
-       "1       401  FBIS3-39240     1  10014.111328     0.0        1.0\n",
-       "2       401   FT924-4470     2  10013.638672     0.0        1.0\n",
-       "3       401  FBIS4-18182     3  10013.591797     0.0        0.0\n",
-       "4       401  FBIS3-59055     4  10013.441406     0.0        1.0"
+       "   query_id ignore_x       doc_id  rank         score     ignore2  ignore_y  \\\n",
+       "0       401       Q0   FT924-5091     0  10015.175781  acsys8aln2       0.0   \n",
+       "1       401       Q0  FBIS3-39240     1  10014.111328  acsys8aln2       0.0   \n",
+       "2       401       Q0   FT924-4470     2  10013.638672  acsys8aln2       0.0   \n",
+       "3       401       Q0  FBIS4-18182     3  10013.591797  acsys8aln2       0.0   \n",
+       "4       401       Q0  FBIS3-59055     4  10013.441406  acsys8aln2       0.0   \n",
+       "\n",
+       "   relevance  \n",
+       "0        1.0  \n",
+       "1        1.0  \n",
+       "2        1.0  \n",
+       "3        0.0  \n",
+       "4        1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,16 +399,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['query_id', 'doc_id', 'rank', 'score', 'ignore', 'relevance'], dtype='object')"
+       "Index(['query_id', 'ignore_x', 'doc_id', 'rank', 'score', 'ignore2',\n",
+       "       'ignore_y', 'relevance'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -461,27 +453,27 @@
        "    <tr>\n",
        "      <th>401</th>\n",
        "      <td>0.7</td>\n",
-       "      <td>0.129200</td>\n",
+       "      <td>0.209015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>402</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.094294</td>\n",
+       "      <td>0.121394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>403</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.086817</td>\n",
+       "      <td>0.113520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>404</th>\n",
        "      <td>0.4</td>\n",
-       "      <td>0.128070</td>\n",
+       "      <td>0.204275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>405</th>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.037844</td>\n",
+       "      <td>0.066068</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -489,14 +481,14 @@
       ],
       "text/plain": [
        "     precision@10       MAP\n",
-       "401           0.7  0.129200\n",
-       "402           1.0  0.094294\n",
-       "403           1.0  0.086817\n",
-       "404           0.4  0.128070\n",
-       "405           0.2  0.037844"
+       "401           0.7  0.209015\n",
+       "402           1.0  0.121394\n",
+       "403           1.0  0.113520\n",
+       "404           0.4  0.204275\n",
+       "405           0.2  0.066068"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,15 +505,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall precision@10: 0.4780\n",
-      "Overall MAP: 0.0804\n"
+      "Overall precision@10: 0.4720\n",
+      "Overall MAP: 0.1371\n"
      ]
     }
    ],
